service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-server-service
spec:
  selector:
    app: react-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 8989
    targetPort: 3000
