ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: react-server-service 
          servicePort: 8989
